关闭更新提示

--- a/packages/admin/src/style/custom.scss
+++ b/packages/admin/src/style/custom.scss
@@ -79,6 +79,7 @@ div[tabindex='-1'] {
 }
 
 .upgrade-tips {
+  display:none;
   padding: 0 10px;
   border-bottom: 1px solid rgb(212 167 44 / 40%);
 
